Bug 697836 - Use system's link color and create new visited link color in HC mode. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D33540